Read date from weather object and display it to the user. Added dateUtil class to convert epoch time to readable format - Method supports different API levels

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
 
     <string name="location_format">%1$s, %2$s</string>
 
+    <string name="EEEE_MMMM_dd_pattern">"EEEE, MMMM dd"</string>
+
 </resources>
